<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019 Moez Bhatti <innovate.bhatti@gmail.com>
  ~
  ~ This file is part of replify.
  ~
  ~ replify is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ replify is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with replify.  If not, see <http://www.gnu.org/licenses/>.
  -->
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/appBarLayout"
        layout="@layout/collapsing_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp">

            <LinearLayout
                android:id="@+id/toUpgrade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:visibility="gone"
                android:layout_marginBottom="32dp"
                android:orientation="vertical">

                <com.innovate.replify.common.widget.QkTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/qksms_plus_description_title"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textStyle="bold"
                    app:textSize="primary" />

                <com.innovate.replify.common.widget.QkTextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/qksms_plus_description_summary"
                    android:textColor="?android:attr/textColorSecondary"
                    app:textSize="secondary" />

                <com.innovate.replify.common.widget.QkTextView
                    android:id="@+id/upgrade"
                    style="@style/TextButton"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_rectangle_2dp"
                    android:text="@string/qksms_plus_upgrade"
                    app:textColor="primaryOnTheme"
                    tools:backgroundTint="@color/tools_theme" />

                <com.innovate.replify.common.widget.QkTextView
                    android:id="@+id/upgradeDonate"
                    style="@style/TextButton"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rounded_rectangle_outline_2dp"
                    android:backgroundTint="?android:attr/divider"
                    android:text="@string/qksms_plus_upgrade_donate"
                    android:textColor="?android:attr/textColorPrimary"
                    tools:backgroundTint="@color/separatorLight" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/upgraded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/rounded_rectangle_2dp"
                android:backgroundTint="?android:attr/divider"
                android:padding="16dp"
                tools:backgroundTint="@color/separatorLight">

                <ImageView
                    android:id="@+id/thanksIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_favorite_black_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:tint="@color/tools_theme" />

                <com.innovate.replify.common.widget.QkTextView
                    android:id="@+id/thanksTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/qksms_plus_thanks_title"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/thanksIcon"
                    app:textSize="secondary" />

                <com.innovate.replify.common.widget.QkTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/qksms_plus_thanks_summary"
                    android:textColor="?android:attr/textColorSecondary"
                    app:layout_constraintEnd_toEndOf="@id/thanksTitle"
                    app:layout_constraintStart_toStartOf="@id/thanksTitle"
                    app:layout_constraintTop_toBottomOf="@id/thanksTitle"
                    app:textSize="secondary" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/free"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"

                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <com.innovate.replify.common.widget.QkTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/qksms_plus_free_title"
                    android:textColor="?android:attr/textColorSecondary"
                    app:textSize="secondary" />

                <com.innovate.replify.common.widget.QkTextView
                    android:id="@+id/donate"
                    style="@style/TextButton"
                    android:layout_marginTop="16dp"
                    android:visibility="gone"
                    android:background="@drawable/rounded_rectangle_2dp"
                    android:text="@string/qksms_plus_donate"
                    app:textColor="primaryOnTheme"
                    tools:backgroundTint="@color/tools_theme" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="8dp"
                android:background="?android:attr/divider" />

            <com.innovate.replify.common.widget.PreferenceView
                android:id="@+id/themes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_palette_black_24dp"
                app:summary="@string/qksms_plus_themes_summary"
                app:title="@string/qksms_plus_themes_title" />

            <com.innovate.replify.common.widget.PreferenceView
                android:id="@+id/schedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_event_black_24dp"
                app:summary="@string/qksms_plus_scheduled_summary"
                app:title="@string/qksms_plus_scheduled_title" />

            <com.innovate.replify.common.widget.PreferenceView
                android:id="@+id/backup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_backup_black_24dp"
                app:summary="@string/qksms_plus_backup_summary"
                app:title="@string/qksms_plus_backup_title" />

            <com.innovate.replify.common.widget.PreferenceView
                android:id="@+id/delayed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_av_timer_black_24dp"
                app:summary="@string/qksms_plus_delayed_summary"
                app:title="@string/qksms_plus_delayed_title" />

            <com.innovate.replify.common.widget.PreferenceView
                android:id="@+id/night"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_invert_colors_black_24dp"
                app:summary="@string/qksms_plus_night_summary"
                app:title="@string/qksms_plus_night_title" />



        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:background="?android:attr/divider" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>